@@ -62,8 +62,11 @@ Many thanks to the following people who have contributed code to <em/kppp/
 
 <item><url url="mailto:wuebben@eure.de" name="Markus Wuebben"> for the ATI query dialog.
 
-<item><url url="mailto:peter.silva@videotron.ca" name="Peter Silva"> for pop up dialogs
+<item><url url="mailto:peter.silva@videotron.ca" name="Peter Silva"> for pop
+up dialogs
 and other contributions.
+<item><url url="mailto:MABrown@etcconnect.com" name="Martin A. Brown" for
+proofreading some english text in the program
 </itemize>
 <p>
 
